%%{init: {"er": {"nodeSpacing": 20, "rankSpacing": 25, "entityPadding": 3, "minEntityWidth": 30}}}%%
erDiagram
    ingredients {
        bigint id PK
        varchar name
        enum unit
        decimal low_stock_threshold
        boolean is_active
        varchar batch_mode
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }
    ingredient_batches {
        bigint id PK
        bigint ingredient_id FK
        decimal quantity
        date expiry_date
        timestamp received_at
        decimal cost_per_unit
        integer custom_order
    }
    menu_ingredients {
        bigint id PK
        bigint menu_id FK
        bigint ingredient_id FK
        decimal quantity_used
    }
    stock_movements {
        bigint id PK
        bigint ingredient_id FK
        bigint ingredient_batch_id FK
        bigint order_id FK
        bigint order_item_id FK
        bigint stock_adjustment_id FK
        enum movement_type
        varchar source_type
        varchar source_id
        decimal quantity_before
        decimal quantity_change
        decimal quantity_after
        decimal unit_cost
        varchar reference
        text notes
        bigint recorded_by FK
        timestamp created_at
        timestamp updated_at
    }
    stock_adjustments {
        bigint id PK
        bigint ingredient_id FK
        enum adjustment_type
        decimal quantity
        decimal quantity_before
        decimal quantity_after
        varchar reason
        bigint reported_by FK
        timestamp adjusted_at
        timestamp created_at
        timestamp updated_at
    }
    daily_ingredient_usages {
        bigint id PK
        date usage_date
        bigint ingredient_id FK
        varchar ingredient_name
        varchar unit
        decimal jumlah_digunakan
        timestamp created_at
        timestamp updated_at
    }
    stock_reports {
        bigint id PK
        bigint ingredient_id FK
        bigint reported_by FK
        enum report_type
        decimal quantity
        decimal quantity_before
        decimal quantity_after
        text reason
        enum status
        bigint reviewed_by FK
        text rejection_note
        timestamp reviewed_at
        timestamp created_at
        timestamp updated_at
    }
    menus {
        bigint id PK
        varchar name
        decimal price
        boolean is_available
        boolean is_stock_calculated
    }

    ingredients ||--o{ ingredient_batches : ""
    ingredients ||--o{ stock_movements : ""
    ingredients ||--o{ stock_adjustments : ""
    ingredients ||--o{ daily_ingredient_usages : ""
    ingredients ||--o{ stock_reports : ""
    ingredients ||--o{ menu_ingredients : ""
    ingredient_batches ||--o{ stock_movements : ""
    ingredient_batches ||--o{ stock_adjustments : ""
    menus ||--o{ menu_ingredients : ""
    menu_ingredients }o--|| menus : ""
